# strands-adb

./: .gitignore  404.html  AGENTS.md  FRONTIERS.md  GOAL.md  INSTALL_ANDROID.md  NEW_FRONTIERS.md  README.md  SSH_ANDROID.md  TASK.md  index.html  install_android.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
api-reference/: index.html
architecture/: index.html
docs/: api-reference.md  architecture.md  index.md
docs/examples/: autonomous.md  notifications.md  overview.md  screen-reader.md  whatsapp.md
docs/getting-started/: connect.md  installation.md  quickstart.md
docs/guide/: accessibility.md  actions.md  apps-intents.md  camera.md  devduck.md  logcat.md  safety.md  screen-recording.md  sensors.md  settings.md  smart-tap.md  ssh.md  ui-automation.md  vision.md
examples/: devduck_config.sh  quickstart.py
examples/autonomous/: index.html
examples/notifications/: index.html
examples/overview/: index.html
examples/screen-reader/: index.html
examples/whatsapp/: index.html
getting-started/connect/: index.html
scripts/: ssh_setup_android.sh
search/: search_index.json
strands_adb/: __init__.py  adb_tool.py  mcp.py  recorder.py  smart.py
stylesheets/: extra.css
tests/: conftest.py  test_accessibility.py  test_camera.py  test_connectivity.py  test_gesture_stream.py  test_logcat_stream.py  test_media_session.py  test_notifications.py  test_power.py  test_screen_frames.py  test_security.py  test_sensors.py  test_session.py  test_settings.py  test_smart.py  test_smoke.py  test_ui_dsl.py  test_ui_state.py
(+16 files in other folders)
